# urchin-rs

./: Cargo.toml  README.md  urchin_config.toml
common/: Cargo.toml
common/src/: app_error.rs  config.rs  lib.rs  posts.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
urchin-admin-app/: Cargo.toml
urchin-admin-app/src/: main.rs
urchin-app/: Cargo.toml
urchin-app/src/: main.rs
views/: index.html.in  post.html.in
